--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,14 @@
 // Specific CSS for your home-page
+.lend-container {
+  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.2)),
+  url("../../images/background_goodterms.jpg");
+  object-fit: cover;
+  height: 100vh;
+  width: 50%;
+}
+
+.borrow-container {
+  background-color: $green;
+  height: 100vh;
+  width: 50%;
+}
