--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+  <%= render 'shared/navbar' %>
+<div class="home-container d-flex justify-content-center">
+    <div class="lend-container d-flex justify-content-end align-items-center">
+      <h1>Good </h1>
+          <%= link_to "Lend an item", new_item_path, class:'borrow-btn' %>
+  </div>
+    <div class="borrow-container d-flex justify-content-start align-items-center">
+      <h1> Terms.</h1>
+        <%= link_to "Lend an item", new_item_path, class:'borrow-btn' %>
+    </div>
+
+</div>
