--- a/app/assets/stylesheets/components/_btns.scss
+++ b/app/assets/stylesheets/components/_btns.scss
@@ -1,13 +1,18 @@
 .lend-btns {
-display: flex;
-justify-content: center;
-align-items: end;
-
+  background-color: white;
+  border-radius: 61px;
+  color: black;
+  text-decoration: none;
+  padding: 20px 30px;
+  text-transform: uppercase;
 }
 
-.borrow-btns {
-display: flex;
-justify-content: center;
-align-items: end;
 
+.borrow-btns {
+  background-color: white;
+  border-radius: 61px;
+  color: black;
+  text-decoration: none;
+  padding: 20px 30px;
+  text-transform: uppercase;
 }
