--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -24,5 +24,5 @@
 }
 
 .navbar-txt:hover {
-  color: rgba($color: #dbdbdb, $alpha: 1)!important;
+  color: rgba($color: #000000, $alpha: 0.8)!important;
 }
