--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -20,3 +20,8 @@ h1 {
   font-weight: 800;
   font-size: 200px!important;
 }
+
+h2 {
+  font-family: 'Calistoga', cursive!important;
+  color: black;
+}
