--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,6 +14,10 @@
                   required: true,
                   autofocus: true,
                   input_html: { autocomplete: "last_name" }%>
+      <%= f.input :location,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "location" }%>
       <%= f.input :email,
                   required: true,
                   autofocus: true,
