--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -5,6 +5,7 @@
 .avatar-large {
   width: 56px;
   border-radius: 50%;
+  margin-left: 30px;
 }
 .avatar-bordered {
   width: 40px;
@@ -14,7 +15,8 @@
 }
 .avatar-square {
   width: 40px;
-  border-radius: 0px;
+  border-radius: 2px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  margin: 5px;
+  margin-left: 10px;
 }
