--- a/app/assets/stylesheets/components/_btns.scss
+++ b/app/assets/stylesheets/components/_btns.scss
@@ -1,28 +1,32 @@
-.lend-btns {
-  background-color: white;
+.borrow-btns {
+  background-color: rgba($color: #ffffff, $alpha: 0.2);
   border-radius: 61px;
-  color: black;
+  border: 1px white solid;
+  color: rgb(0, 0, 0);
   text-decoration: none;
   padding: 20px 30px;
   text-transform: uppercase;
-  .lend-btns:hover {
-    color: rgba($color: #ffffff, $alpha: 0.8)!important;
-    background-color: rgba($color: #ffffff, $alpha: 0.7)!important;
-  }
+}
+
+.borrow-btns:hover {
+  color: rgba($color: #000000, $alpha: 0.8)!important;
+  background-color: rgba($color: #ffffff, $alpha: 0.7)!important;
 }
 
 
-.borrow-btns {
-  background-color: white;
+.lend-btns {
+  background-color: rgba($color: #ffffff, $alpha: 0.2);
+  border: 1px rgb(0, 0, 0) solid;
   border-radius: 61px;
-  color: black;
+  color: rgb(255, 255, 255);
   text-decoration: none;
   padding: 20px 30px;
   text-transform: uppercase;
-  .borrow-btns:hover {
-    color: rgba($color: #ffffff, $alpha: 0.8)!important;
-    background-color: rgba($color: #ffffff, $alpha: 0.7)!important;
-  }
+}
+
+.lend-btns:hover {
+  color: rgba($color: #000000, $alpha: 0.8)!important;
+  background-color: rgba($color: #ffffff, $alpha: 0.9)!important;
 }
 
 .submit-btns {
