--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 .lend-container {
   background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.2)),
-  url('app/assets/images/home.jpg');
+  url("https://res.cloudinary.com/benstvit/image/upload/v1646137520/background_goodterms_jpmg8n.jpg");
   background-size: contain;
   object-fit: cover;
   height: 100vh;
