--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,12 @@
 <div class="home-container d-flex justify-content-center">
     <div class="lend-container d-flex justify-content-center flex-column align-items-center flex-wrap">
       <h1>Good </h1>
-          <%= link_to "Lend an item", new_item_path, class:'borrow-btns' %>
+          <%= link_to "Borrow an item", new_item_path, class:'borrow-btns' %>
   </div>
+
     <div class="borrow-container d-flex justify-content-center flex-column align-items-center flex-wrap">
-      <h1> Terms.</h1>
-        <%= link_to "Borrow an item", new_item_path, class:'borrow-btns' %>
+      <h1 class="gradient1"> Terms.</h1>
+        <%= link_to "Lend an item", new_item_path, class:'lend-btns'%>
     </div>
 
 </div>
