--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,6 @@
 <h2>Your Item:</h2>
 
-<%= image_tag 'default-img', alt: "Item Image", width: 200 %>
+<%= cl_image_tag @item.photo.key, height: 300, width: 400, crop: :fill %>
 <%= @item.item_name %>
 <%= @item.description %>
 
