added mapbox functionality

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -6,7 +6,11 @@
       <%= f.input :item_name %>
       <%= f.input :description %>
       <%= f.input :photo, as: :file %>
-      <%= f.submit %>
+      <%= f.submit class:'submit-btns' %>
     <% end %>
   </div>
+  <div style="width: 100%; height: 600px;"
+  data-controller="mapbox"
+  data-mapbox-markers-value="<%= @markers.to_json %>"
+  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
 </div>
