--- a/app/assets/stylesheets/components/_btns.scss
+++ b/app/assets/stylesheets/components/_btns.scss
@@ -16,7 +16,7 @@
 
 .lend-btns {
   background-color: rgba($color: #ffffff, $alpha: 0.2);
-  border: 1px rgb(0, 0, 0) solid;
+  border: 1px rgba(0, 0, 0, 0.5) solid;
   border-radius: 61px;
   color: rgb(255, 255, 255);
   text-decoration: none;
