--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -22,6 +22,11 @@ h1 {
 }
 
 h2 {
-  font-family: 'Calistoga', cursive!important;
+  font-family: 'Oswald', sans-serif!important;
   color: black;
+  text-transform: uppercase;
+}
+
+p {
+  font-family: 'Oswald', sans-serif!important;
 }
