dashboard in progress and default picture and registration

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,7 +9,7 @@
 }
 
 .borrow-container {
-  background-color: $green;
+  background-color: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.2)), $green;
   height: 100vh;
   width: 50%;
 }
