--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,17 +11,17 @@
         <% if user_signed_in? %>
           <% if params[:controller] == 'pages' && params[:action] == 'home'%>
             <li class="nav-item active">
-              <h2><%= link_to "Home", root_path, class: "nav-link navbar-txt active" %></h2>
+              <h2><%= link_to "Home", root_path, class: "nav-link navbar-txt" %></h2>
             </li>
             <li class="nav-item">
               <h2><%= link_to "Dashboard", dashboard_path, class: "nav-link navbar-txt" %></h2>
             </li>
           <% elsif params[:controller] == 'pages' && params[:action] == 'dashboard' %>
-            <li class="nav-item active">
+            <li class="nav-item">
               <h2><%= link_to "Home", root_path, class: "nav-link navbar-txt" %></h2>
             </li>
-            <li class="nav-item">
-              <h2><%= link_to "Dashboard", dashboard_path, class: "nav-link navbar-txt active" %></h2>
+            <li class="nav-item active">
+              <h2><%= link_to "Dashboard", dashboard_path, class: "nav-link navbar-txt" %></h2>
             </li>
           <% end %>
           <li class="nav-item dropdown">
