--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -2,11 +2,15 @@
   width: 40px;
   border-radius: 50%;
   object-fit: cover;
+  border: 1px white solid;
 }
 .avatar-large {
   width: 56px;
+  height: 50px;
   border-radius: 50%;
   margin-left: 30px;
+  border: white 1px solid;
+
 }
 .avatar-bordered {
   width: 40px;
