--- a/app/assets/stylesheets/components/_btns.scss
+++ b/app/assets/stylesheets/components/_btns.scss
@@ -30,7 +30,7 @@
 }
 
 .submit-btns {
-    background-color: #34A0A4;
+    background-color: #184E77;
     border-radius: 50px;
     color: white;
     text-decoration: none;
@@ -44,7 +44,7 @@
 
 .submit-txt {
   border-radius: 3px;
-  color: #34A0A4;
+  color: #184E77;
   text-decoration: none;
 .submit-txt:hover {
   color: rgba($color: #000000, $alpha: 0.8)!important;
