--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -4,8 +4,8 @@
       <%= i.input :description %>
     <% end %>
     <%= f.input :photo, as: :file %>
-    <%= f.association :user %>
-    <%= f.input :loan_date %>
-    <%= f.input :return_date %>
+    <%= f.association :user, label: "Borrower", label_method: :first_name%>
+    <%= f.input :loan_date, as: :string, input_html: { class: "flatpickr-input" }  %>
+    <%= f.input :return_date, as: :string, input_html: { class: "flatpickr-input" }  %>
     <%= f.submit "Create a loan", class: "btn btn-primary" %>
 <% end %>
