--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -8,21 +8,33 @@
   height: 100%;
   margin: 20px 20px 20px;
   padding: 20px;
+
   .loan-card{
     display: block;
-    background-color: rgb(131, 131, 131);
-    height: 800px;
-    width: 400px;
+    background-color: rgba(24,78,119,0.5);
+    height: 600px;
+    width: 360px;
     margin:0 0 10px;
-    border: 15px solid rgb(255, 255, 255);
-    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.2);
+    border: 15px solid rgba(52,160,164,0.5);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+    .loan-card-item-info{
+      padding: 0 30px;
+      p{
+        color: white;
+        text-align: left;
+      }
 
+    }
+    .loan-card-image{
+    height: 330px;
     img{
-      height: 280px;
-      width: 100%;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
+        overflow: hidden;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        clip-path: polygon(0 0, 252% 0, 119% 103%, 0 80%);
+      }
     }
   }
 }
