--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -2,16 +2,30 @@
   <div class="loan-index">
       <% loans.each do |loan| %>
         <div class="loan-card">
-          <%= cl_image_tag (loan.item.photo.key) %>
+          <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %></div>
+            <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
           <div class="loan-card-item-info">
-            <%= loan.item.item_name %>
-            <div class="loan-card-item-info-actions">
-              <%='💌'%>
-              <%='🔄'%>
-              <%='⭐️'%>
-            </div>
+            <% if loan.item.user == current_user %>
+              <p><%= "👤 #{loan.user.first_name}" %></p>
+            <% else %>
+              <p><%= loan.item.user.first_name %></p>
+            <% end %>
+            <p><%="🎯 #{loan.return_date}" %></p>
+            <p><%= "👌 #{loan.item.description}" %></p>
+          </div>
+          <div class="loan-card-item-info-actions">
+            <%='💌'%>
+            <%='🔄'%>
+            <%='⭐️'%>
           </div>
         </div>
       <% end %>
   </div>
 </div>
+
+
+<%# Thibault
+
+Valentine
+
+Valentine %>
