--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -4,7 +4,7 @@
       <%= i.input :description %>
     <% end %>
     <%= f.input :photo, as: :file %>
-    <%= f.association :user %>
+    <%= f.association :user, collection: User.first_name.order(:first_name), prompt: "Choose a User" %>
     <%= f.input :loan_date %>
     <%= f.input :return_date %>
     <%= f.submit "Create a loan", class: "btn btn-primary" %>
