--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -37,4 +37,33 @@
       }
     }
   }
+
+  .borrow-card{
+    display: block;
+    background-color: rgba(24,78,119,0.5);
+    height: 600px;
+    width: 360px;
+    margin:0 0 10px;
+    border: 15px solid rgba(217,237,146,0.5);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+    .borrow-card-item-info{
+      padding: 0 30px;
+      p{
+        color: white;
+        text-align: left;
+      }
+
+    }
+    .borrow-card-image{
+    height: 330px;
+    img{
+        overflow: hidden;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        clip-path: polygon(0 0, 252% 0, 119% 103%, 0 80%);
+      }
+    }
+  }
 }
