--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -7,7 +7,7 @@
         <%= i.input :description %>
       <% end %>
       <%= f.input :photo, as: :file %>
-      <%= f.association :user %>
+      <%= f.association :user.first_name %>
       <%= f.input :loan_date %>
       <%= f.input :return_date %>
       <%= f.submit "Create a loan", class: "btn btn-primary" %>
