New request message working

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,4 +11,4 @@
 
 </div>
 <%= render 'shared/index_loans', loans: @loans %>
-<%= render 'shared/mapbox' %>
+<%= render 'shared/new_loan_mesg', loans: @loans %>
