--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -9,5 +9,5 @@
       <%= f.input :loan_date, as: :date, input_html: { class: "flatpickr-input" }  %>
       <%= f.input :return_date, as: :date, input_html: { class: "flatpickr-input" }  %>
     </div>
-    <%= f.submit "Create a loan", class: "btn btn-primary" %>
+    <%= f.submit "Send Loan Request", class: "btn btn-primary" %>
 <% end %>
