--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -17,3 +17,21 @@
 .home-loans-container {
   margin: 15px 10px;
 }
+
+.home-container {
+  position: relative;
+}
+.introduction {
+  position: absolute;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.step1 {
+
+}
+
+.step2 {
+
+}
