--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,16 +22,35 @@
   position: relative;
 }
 .introduction {
-  position: absolute;
+  top: 657px;
   height: 100%;
   display: flex;
+  margin-top: -174px;
   flex-direction: column;
 }
 
 .step1 {
+  text-align: left;
+  padding: 20px;
+  padding-left: 100px;
+  z-index: 1;
+  p {
+    color: white;
+    text-align: center!important;
+    margin-left: 40vh;
+    padding-left: 20px;
 
+  }
 }
 
 .step2 {
-
+  text-align: right;
+  padding: 20px;
+  padding-right: 100px;
+  p {
+    color: white;
+    text-align: center!important;
+    margin-right: 40vh;
+    padding-right: 20px;
+  }
 }
