--- a/app/views/shared/_mapbox.html.erb
+++ b/app/views/shared/_mapbox.html.erb
@@ -1,4 +1,5 @@
-<div style="width: 600px; height: 600px;"
+<h3>User locations:</h3>
+<div style="width: %; height: 400px; margin: 50px 0 0 50px; border-radius: 5px; box-shadow: 0 0 15px rgba(0,0,0,0.2);"
   data-controller="mapbox"
   data-mapbox-markers-value="<%= @markers.to_json %>"
   data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
