--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,5 +23,6 @@
 }
 
 body {
-  background-color: $green;
-}
+  background: rgb(255,255,255);
+background: linear-gradient(270deg, rgba(255,255,255,1) 0%, rgba(82,182,154,1) 0%, rgba(130,222,197,1) 100%);
+  }
