--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -88,8 +88,13 @@
   margin-bottom: 20px;
   padding: 20px;
   border-radius: 10px;
-  width: 50%;
-  background-image: linear-gradient(45deg, #87c2b1, transparent);
+  width: 100%;
+}
+
+.card-product:hover {
+  transform: scale(0.98, 0.98);
+  box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.20),
+    -5px -5px 30px 15px rgba(0,0,0,0.15);
 }
 
 .card-product .img {
@@ -119,4 +124,19 @@
   justify-content: space-around;
   align-items: start;
   flex-wrap: wrap;
+}
+
+.user-cards {
+  background-color: white;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  padding: 40px 30px;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 }
