added map markers

--- a/app/assets/stylesheets/components/_mapbox.scss
+++ b/app/assets/stylesheets/components/_mapbox.scss
@@ -2,3 +2,12 @@
   display: flex;
   align-items: center;
 }
+
+.mapboxgl-popup {
+  max-width: 200px;
+}
+
+.mapboxgl-popup-content {
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+}
