--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,6 +12,10 @@
   // background-color: $green;
   height: 100vh;
   width: 50%;
+  h1 {
+    background-clip: text;
+
+  }
 }
 
 .home-loans-container {
