--- a/app/views/loans/new_borrow.html.erb
+++ b/app/views/loans/new_borrow.html.erb
@@ -1,16 +1,16 @@
 
 <div class="form-container">
 <h2>Tell us more about your item !</h2>
-  <%= simple_form_for [ @loan ] do |f| %>
+  <%= simple_form_for(@loan, as: :loan, method: :post, url: loans_borrow_path) do |f| %>
       <%= simple_fields_for :item do |i| %>
         <%= i.input :item_name %>
         <%= i.input :description %>
+        <%= i.input :user_id, collection: User.all, label: "Lender", label_method: :first_name, value_method: :id, include_blank: false %>
       <% end %>
       <%= f.input :photo, as: :file %>
-      <%= f.association :user, label: "Borrower", label_method: :first_name, value_method: :id, include_blank: false %>
       <%= f.input :loan_date %>
       <%= f.input :return_date %>
-      <%= f.submit "Let me lend this!", class: "btn btn-primary" %>
+      <%= f.submit "Let me borrow this!", class: "btn btn-primary" %>
   <% end %>
 
 </div>
