--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="home-container d-flex justify-content-center flex-wrap">
     <div class="lend-container d-flex justify-content-center flex-column align-items-center flex-wrap">
       <h1>Good </h1>
-          <%= link_to "Borrow an item", new_loan_path, class:'borrow-btns' %>
+          <%= link_to "Borrow an item", loans_borrow_path, class:'borrow-btns' %>
   </div>
 
     <div class="borrow-container d-flex justify-content-center flex-column align-items-center flex-wrap">
