--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -1,13 +1,14 @@
 <div class="dashboard-container">
   <div class="loan-index">
     <% loans.each do |loan| %>
+    <%# <% raise %> %>
       <% if (current_user == loan.item.user || current_user == loan.user) %>
         <% if loan.item.user == current_user %>
           <div class="loan-card">
             <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %></div>
             <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
             <div class="loan-card-item-info">
-              <p><%= "👤 Lended to #{loan.user.first_name}" %></p>
+              <p><%= "👤 Lent to #{loan.user.first_name}" %></p>
               <p><%="🎯 #{loan.return_date}" %></p>
               <p><%= "👌 #{loan.item.description}" %></p>
             </div>
