--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,6 +23,10 @@
             <li class="nav-item active">
               <h2><%= link_to "Dashboard", dashboard_path, class: "nav-link navbar-txt" %></h2>
             </li>
+          <% else %>
+            <li class="nav-item">
+              <h2><%= link_to "Home", root_path, class: "nav-link navbar-txt" %></h2>
+            </li>
           <% end %>
           <li class="nav-item dropdown">
             <%= cl_image_tag (current_user.photo.key), class: "avatar-large dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
