--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -131,6 +131,7 @@
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
   border-radius: 3px;
   padding: 40px 30px;
+  margin: 20px;
   width: 50%;
   display: flex;
   justify-content: center;
