--- a/app/views/shared/_loans_index.html.erb
+++ b/app/views/shared/_loans_index.html.erb
@@ -1,43 +1,44 @@
 <div class='user-cards'>
 
   <% if current_user.present? %>
+  <div class="home-loans-container">
   <div class="row">
     <% users.each do |user| %>
       <% counter_borrowed = 0 %>
       <% counter_lent = 0 %>
-
-      <% user.loans.each do |loan| %>
-        <% if loan.item.user.last_name == current_user.last_name %>
-            <% counter_borrowed += 1 %>
+        <% user.loans.each do |loan| %>
+          <% if loan.item.user.last_name == current_user.last_name %>
+              <% counter_borrowed += 1 %>
+              <% end %>
+          <% end %>
+        <% user.items.each do |item| %>
+          <% item.loans.each do |loan| %>
+            <%if loan.user.last_name == current_user.last_name %>
+              <% counter_lent += 1 %>
             <% end %>
-      <% end %>
-      <% user.items.each do |item| %>
-        <% item.loans.each do |loan| %>
-          <%if loan.user.last_name == current_user.last_name %>
-            <% counter_lent += 1 %>
           <% end %>
         <% end %>
-      <% end %>
 
-      <% if counter_lent > 0 || counter_borrowed > 0 %>
-      <div class= "col-12" >
-        <%= link_to user_path(user), :action => 'go' do %>
-        <div class="card-product d-flex justify-content-between">
-          <%= cl_image_tag (user.photo.key), style: 'width:100px'%>
-            <span><h2><%= user.first_name %> <%= user.last_name %></h2></span>
-          <div class="card-product-infos d-flex flex-column justify-content-center align-items-center">
+        <% if counter_lent > 0 || counter_borrowed > 0 %>
+        <div class= "col-12" >
+          <%= link_to user_path(user), :action => 'go' do %>
+          <div class="card-product d-flex justify-content-between">
+            <%= cl_image_tag (user.photo.key), style: 'width:100px'%>
+              <span><h2><%= user.first_name %> <%= user.last_name %></h2></span>
+            <div class="card-product-infos d-flex flex-column justify-content-center align-items-center">
 
-            <div class="loan-description ">
-              <p>Items lent: <strong><%= counter_borrowed %></strong>  </p>
-              <p>Items borrowed: <strong><%= counter_lent %></strong></p>
-              <p>💌 <strong>⭐️</strong></p>
+              <div class="loan-description ">
+                <p>Items lent: <strong><%= counter_borrowed %></strong>  </p>
+                <p>Items borrowed: <strong><%= counter_lent %></strong></p>
+                <p>💌 <strong>⭐️</strong></p>
+              </div>
             </div>
           </div>
+          <% end %>
         </div>
         <% end %>
-      </div>
-      <% end %>
     <% end %>
+  </div>
   </div>
   <% end %>
 </div>
