--- a/app/views/pages/_info_window.html.erb
+++ b/app/views/pages/_info_window.html.erb
@@ -2,7 +2,7 @@
   <h3><%= user.first_name %></h3>
     <ul>
       <% @loans.each do |loan| %>
-        <% if user != current_user %>
+        <% if loan.user != current_user %>
           <li><%= loan.item.item_name %></li>
           <% end %>
         <% end %>
