--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,15 +13,13 @@
 <%= render 'shared/introduction' %>
 
 
-
-
-
-
 <% if current_user.present?%>
-
-  <%= render 'shared/loans_index', users: @users %>
-  <%= render 'shared/index_loans', loans: @loans %>
-  <%= render 'shared/new_loan_mesg', loans: @loans %>
-  <%= render 'shared/mapbox', loans: @loans %>
-
+  <% @loans.each do |loan| %>
+    <% if (current_user == loan.item.user || current_user == loan.user) %>
+      <%= render 'shared/index_loans', loans: @loans %>
+      <%= render 'shared/loans_index', users: @users %>
+      <%= render 'shared/new_loan_mesg', loans: @loans %>
+      <%= render 'shared/mapbox', loans: @loans %>
+    <% end %>
+  <% end %>
 <% end %>
