--- a/app/views/shared/_introduction.html.erb
+++ b/app/views/shared/_introduction.html.erb
@@ -6,7 +6,7 @@
 
   </div>
   <div class="step2 d-flex justify-content-end row">
-      <h1 class='col-4'>.02</h1>
+      <h1 class='col-4'>02.</h1>
       <p class='text-justify col-8'>Lorem ipsum dolor sit amet. Et quos eligendi aut quod repudiandae est explicabo quidem. Et voluptatem voluptate sed inventore fugiat At nostrum magni.
 
   33 nobis nihil sed dolores distinctio et pariatur dolor aut libero culpa aut molestias modi ut consectetur quia id explicabo temporibus. Qui quia vero ad voluptas accusamus sit corrupti voluptatem ut totam ipsa. Id natus voluptatem est deleniti quaerat non molestiae pariatur quo animi aperiam sit velit mollitia est nulla repellendus. Eum molestiae porro hic rerum recusandae est assumenda earum non amet assumenda cum delectus delectus quo vitae itaque a dolor ducimus.</p>
