--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,16 +13,14 @@
             <li class="nav-item active">
               <h2><%= link_to "Home", root_path, class: "nav-link navbar-txt" %></h2>
             </li>
-            <li class="nav-item">
-              <h2><%= link_to "Dashboard", dashboard_path, class: "nav-link navbar-txt" %></h2>
-            </li>
-          <% elsif params[:controller] == 'pages' && params[:action] == 'dashboard' %>
-            <li class="nav-item">
-              <h2><%= link_to "Home", root_path, class: "nav-link navbar-txt" %></h2>
-            </li>
-            <li class="nav-item active">
-              <h2><%= link_to "Dashboard", dashboard_path, class: "nav-link navbar-txt" %></h2>
-            </li>
+            <% @loans.each do |loan| %>
+              <% if (current_user == loan.item.user || current_user == loan.user) %>
+                <%# <li class="nav-item" data-active> %>
+                  <h2><a href="#innerlink" class="nav-link navbar-txt">Dashboard</a></h2>
+                </li>
+                <% break %>
+              <% end %>
+            <% end %>
           <% else %>
             <li class="nav-item">
               <h2><%= link_to "Home", root_path, class: "nav-link navbar-txt" %></h2>
