--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,11 +18,11 @@
 .mid-container {
   margin: 0 auto;
   text-align: center;
-  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.1));
+  // background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.1));
   height: 100vh;
 }
 
 body {
   background: rgb(255,255,255);
-background: linear-gradient(270deg, rgba(255,255,255,1) 0%, rgba(82,182,154,1) 0%, rgba(130,222,197,1) 100%);
+  background: linear-gradient(270deg, rgba(255,255,255,1) 0%, rgba(69,152,129,1) 0%, rgba(129,217,193,1) 100%);
   }
