--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,6 +22,8 @@
       <%= render 'shared/new_loan_mesg', loans: @loans %>
       <%= render 'shared/mapbox', loans: @loans %>
      <% end %>
+     <% break %>
     <% end %>
+
   </div>
 <% end %>
