--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,6 +11,7 @@
       text-decoration: none;
       color: white;
       text-transform: uppercase;
+      transition: all 0.2s linear;
     }
 }
 
