--- a/app/assets/stylesheets/pages/_user.scss
+++ b/app/assets/stylesheets/pages/_user.scss
@@ -2,7 +2,7 @@
   margin-top: 80px;
   padding: 15px;
   width: 100%;
-  margin: 0 auto;
+  margin: 80px auto;
   text-align: center;
   height: 100%;
   h1 {
