added new and create

--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -13,7 +13,7 @@
             </div>
             <div class="loan-card-item-info-actions">
               <%='💌'%>
-              <%='🔄'%>
+              <%= link_to '🔄', loan_mark_path(loan), method: :patch, class: 'submit-btns' %>
               <%='⭐️'%>
             </div>
           </div>
